[gd_scene load_steps=14 format=3 uid="uid://yo08ous2r301"]

[ext_resource type="PackedScene" uid="uid://jsqbrk2ff6vq" path="res://BG.tscn" id="1_7vgbn"]
[ext_resource type="Script" path="res://level_completed.gd" id="1_fs0k8"]
[ext_resource type="FontFile" uid="uid://cw76c467akfgt" path="res://Minecraft.ttf" id="2_5gagx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7w7j"]
bg_color = Color(0.0980985, 0.0980985, 0.0980985, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6ydy2"]
font = ExtResource("2_5gagx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dttup"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_vje4u"]
font = ExtResource("2_5gagx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eowj6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7o8xc"]
font = ExtResource("2_5gagx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekqjv"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4vsoi"]
font = ExtResource("2_5gagx")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_81wfc"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_p2wnf"]
font = ExtResource("2_5gagx")

[node name="LevelCompleted" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fs0k8")

[node name="Title Screen" parent="." instance=ExtResource("1_7vgbn")]

[node name="MarginContainer" type="MarginContainer" parent="Title Screen"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -121.0
offset_top = -79.0
offset_right = 121.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Title Screen/MarginContainer"]
layout_mode = 2

[node name="You Finished!" type="Label" parent="Title Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_q7w7j")
text = "You Finished!"
label_settings = SubResource("LabelSettings_6ydy2")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Here Are Your Stats" type="Label" parent="Title Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_dttup")
text = "Here are your stats: "
label_settings = SubResource("LabelSettings_vje4u")
horizontal_alignment = 1

[node name="Gems" type="Label" parent="Title Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_eowj6")
text = "Gems: "
label_settings = SubResource("LabelSettings_7o8xc")
horizontal_alignment = 1

[node name="Skeletons Killed" type="Label" parent="Title Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ekqjv")
text = "Skeletons Killed: "
label_settings = SubResource("LabelSettings_4vsoi")
horizontal_alignment = 1

[node name="Overall Score" type="Label" parent="Title Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_81wfc")
text = "Overall Score: "
label_settings = SubResource("LabelSettings_p2wnf")
horizontal_alignment = 1

[node name="Play" type="Button" parent="Title Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play Again"

[node name="Main Menu" type="Button" parent="Title Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="Quit" type="Button" parent="Title Screen/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="Title Screen/MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Title Screen/MarginContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Title Screen/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
